<resources>
    <string name="app_name">NIMux</string>
    <string name="menu_home">Home</string>
    <string name="statistics">Statistics</string>
    <string name="manage_users">Manage Users</string>
    <string name="manage_products">Manage Products</string>
    <string name="select_user">Select User</string>
    <string name="overview">Overview</string>
    <string name="settings">Settings</string>
    <string name="enter_password">Enter Password</string>
    <string name="password">Password</string>
    <string name="password_helper_text">Please enter the password to gain access</string>
    <string name="confirm">Confirm</string>
    <string name="pw_error">Password not correct</string>
    <string name="add_user">Add User</string>
    <string name="password_success">Access granted!</string>
    <string name="save">Save</string>
    <string name="changes_saved_toast">Changes have been saved</string>
    <string name="add_user_title">New User</string>
    <string name="coming_soon">Coming later</string>
    <string name="user_add_success">new user has been added</string>
    <string name="add_user_name_error">You must enter a name for a new user</string>
    <string name="name">Name</string>
    <string name="cancel">Cancel</string>
    <string name="user_exists_hint">There\'s already a user with that name</string>
    <string name="manage_user">Manage User</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="custom_amount_helper">Custom amount</string>
    <string name="exact">Exact</string>
    <string name="other">Custom</string>
    <string name="credit">Credit:\ </string>
    <string name="add_amount">Add amount</string>
    <string name="delete_user_alert_title">Delete %1$s</string>
    <string name="delete_user_alert_message">Are you sure you want to delete this user?</string>
    <string name="delete_user_remaining_credit_title">Credit left</string>
    <string name="delete_user_remaining_credit_message">Did you pay out the remaining credit of %1$s to the user?</string>
    <string name="delete_product_alert_title">Delete %1$s</string>
    <string name="delete_product_alert_message">Are you sure you want to delete this product?</string>
    <string name="error_delete_toast">"Error occurred while deleting user "</string>
    <string name="save_changes">save changes</string>
    <string name="edit_title">%1$s</string>
    <string name="add_product">Add Product</string>
    <string name="amount_left_helper">left</string>
    <string name="new_product_title">New Product</string>
    <string name="refillable_switch_text">Product is Refillable</string>
    <string name="price_title">Price:</string>
    <string name="choose_icon_title">Choose Icon</string>
    <string name="none">None</string>
    <string name="cup">Cup</string>
    <string name="bottle">Bottle</string>
    <string name="fastfood">Fastfood</string>
    <string name="fridge">Fridge</string>
    <string name="water">Water</string>
    <string name="current_stock">Current Stock:</string>
    <string name="refill_size_title">Default Refill Size:</string>
    <string name="product_icon_description">product icon</string>
    <string name="field_cant_be_empty">Field can\'t be empty</string>
    <string name="value_wrong_error">This value is not accepted</string>
    <string name="product_exists_error">There\'s already a product  with that name</string>
    <string name="signin">Sign in</string>
    <string name="email">Email</string>
    <string name="create_account">create account</string>
    <string name="sign_in">Sign In</string>
    <string name="toast_error_login">Error trying to sign you in: \</string>
    <string name="toast_error_create_acc">Error trying to create an account: \</string>
    <string name="sign_out">Sign Out</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="wrong_input_type">Error passing this argument</string>
    <string name="wrong_input_value">Negative value not allowed</string>
    <string name="sign_out_alert_message">Are you sure you want to sign out of the application?</string>
    <string name="productname">Product name</string>
    <string name="loading">Loading</string>
    <string name="error_retrieving_user">Error retrieving User</string>
    <string name="failed_create_user">"Failed to create User "</string>
    <string name="zero_euro">0,00€</string>
    <string name="topay_below_zero_toast">Can\'t add 0,00€</string>
    <string name="network_alert_title">Network not available</string>
    <string name="network_alert_message">For security reasons you are not able to perform this action without a network connection. \nPlease check your connection and try again.</string>
    <string name="menu_check_connection">Check connection status</string>
    <string name="ok">OK</string>
    <string name="network_check_failed">Cannot reach database</string>
    <string name="network_check_successful">Connected to online database</string>
    <string name="edit_user_error">An error occurred while trying to edit this user. Please contact the admin.</string>
    <string name="add_user_error">Issue occurred while trying to add user. Contact admin for help</string>
    <string name="select_credit">Select amount to add</string>
    <string name="items_left_title">Items left in stock</string>
    <string name="retry">Retry</string>
    <string name="edit_price_helper">Change the price of this product</string>
    <string name="price">Price</string>
    <string name="edit_product_icon_title">Change product icon</string>
    <string name="manage_product_item_title">Manage Product</string>
    <string name="edit_product_fragment_label">Edit Product</string>
    <string name="select_amount">Select amount</string>
    <string name="add_credit">Add credit</string>
    <string name="select_product_title">Buy</string>
    <string name="enter_pin">Enter PIN</string>
    <string name="confirm_pin">Confirm PIN</string>
    <string name="credit_visible_switch">Credit visible to anyone</string>
    <string name="pin_confirmation_switch">Require confirmation PIN</string>
    <string name="add_user_pin_error">Please choose a 4 digit PIN</string>
    <string name="add_user_confirm_pin_error">PIN doesn\'t match</string>
    <string name="edit_user">Edit User</string>
    <string name="collect_data">Calculate statistics</string>
    <string name="enter_old_pin">Enter old PIN</string>
    <string name="enter_new_pin">Enter new PIN</string>
    <string name="change_pin">Change PIN</string>
    <string name="setup_pin">Setup PIN</string>
    <string name="enter_old_pin_error">Please enter the old Pin</string>
    <string name="remove_pin_confirmation_dialog_title">Enter PIN to turn PIN confirmation off</string>
    <string name="wrong_pin_input">PIN not correct</string>
    <string name="action_history">Action History</string>
    <string name="no_value_alert_title">No value selected</string>
    <string name="no_value_alert_message">Please select the amount that has been added to the stock</string>
    <string name="users">users</string>
    <string name="products">products</string>
    <string name="accounts">accounts</string>
    <string name="amount_log_title">Amount:</string>
    <string name="account_log_description_login">Login</string>
    <string name="user_detail_fragment_label">User Action</string>
    <string name="product_detail_fragment_label">Product Action</string>
    <string name="log_detail_changedby_title">Changed By:</string>
    <string name="log_detail_device_title">Device:</string>
    <string name="home_user_transition_name" translatable="false">%1$s card</string>
    <string name="home_user_name_transition_name" translatable="false">%1$s name</string>
    <string name="home_user_name_detail_transition_name" translatable="false">name detail trans name</string>
    <string name="home_user_detail_transition_name" translatable="false">card detail trans name</string>
    <string name="money">%.2f€</string>
    <string name="substract_money">-%.2f€</string>
    <string name="checkout_nav_löabel">Checkout</string>
    <string name="pctn" translatable="false">product card %1$s</string>
    <string name="pcdtn" translatable="false">card card card</string>
    <string name="home_product_icon_transition_name" translatable="false">name view %1$s</string>
    <string name="checkout_product_icon_transition_name" translatable="false">icon icon icon</string>
    <string name="home_product_name_transition_name" translatable="false">icon for %1$s</string>
    <string name="checkout_product_name_transition_name" translatable="false">name name name</string>
    <string name="home_product_price_transition_name" translatable="false">price trans name %1$s</string>
    <string name="checkout_product_price_transition_name" translatable="false">price price price</string>
    <string name="checkout_title_thanks">Thank you for your purchase %1$s</string>
    <string name="checkout_card_trans_name" translatable="false">checkout card</string>
    <string name="old_credit_title">Old credit:</string>
    <string name="new_credit_title">New credit:</string>
    <string name="name_edittext_helper">Name can\'t be changed later</string>
    <string name="home_checkout_credit_low_warn_soft">You have no credit left. \nPlease recharge your credit as soon as possible.</string>
    <string name="close">close</string>
    <string name="enter_pin_alert_title">Enter PIN</string>
    <string name="title_activity_in" translatable="false">InActivity</string>
    <string name="setting_standby">Standby after 45 seconds</string>
    <string name="settings_scan">Wake up from standby when face is detected</string>
    <string name="camera_perm_missing_toast">Camera permission missing</string>
    <string name="standby_ten_seconds_toast">Standby in 10 seconds</string>
    <string name="face_recon_fragment_title">Automatic User Detection</string>
    <string name="face_scan_fragment_setting_text">Detect users by their face</string>
    <string name="face_icon_description">Face Icon as hint for face scanning</string>
    <string name="add_facial_data_button">Add facial data</string>
    <string name="add_facial_data_fragment_title">Add Facial Data for User</string>
    <string name="cookie">Cookie</string>
    <string name="feedback">Feedback</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="occurrence">Occurrence:</string>
    <string name="feedback_name_hint">Name (Optional)</string>
    <string name="feedback_name_helper">In case I need to check back</string>
    <string name="send_feedback_button_text">Send Feedback</string>
    <string name="feedback_rb_100" translatable="false">100%</string>
    <string name="feedback_rb_50_to_100" translatable="false">50-100%</string>
    <string name="feedback_rb_10_to_50" translatable="false">10-50%</string>
    <string name="feedback_rb_1_to_10" translatable="false">1-10%</string>
    <string name="feedback_rb_under_1" translatable="false">&lt;1%</string>
    <string name="manage_menu_title">Manage</string>
    <string name="lock_action_title">lock</string>
    <string name="tea_icon_name">Tea</string>
    <string name="ice_cream_icon_name">ice cream</string>
    <string name="pizza_icon_name">pizza</string>
    <string name="egg_icon_name">Egg</string>
    <string name="product_icon_can_name">Can</string>
    <string name="help_action_title">Help</string>
    <string name="suggest_users_title">Suggest users</string>
    <string name="suggested_users_title">Suggested Users</string>
    <string name="approve_button">Approve</string>
    <string name="store_title">Store</string>
    <string name="warehouse">Warehouse</string>
    <string name="shelf_name">Shelf Name</string>
    <string name="shelf_column">Columns (width)</string>
    <string name="shelf_row">Rows (height)</string>
</resources>