<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:id="@+id/action_group"
        android:checkableBehavior="single">
<!--        <item-->
<!--            android:id="@+id/nav_home_manual"-->
<!--            android:icon="@drawable/ic_round_free_breakfast_24"-->
<!--            android:title="@string/menu_home" />-->
<!--        <item-->
<!--            android:id="@+id/nav_special_order"-->
<!--            android:icon="@drawable/ic_round_star_24"-->
<!--            android:title="@string/special_order_menu_title" />-->
        <item
            android:id="@+id/nav_overview"
            android:icon="@drawable/ic_round_format_list_bulleted_24"
            android:title="@string/overview" />
        <item
            android:id="@+id/nav_statistics"
            android:icon="@drawable/ic_round_trending_up_24"
            android:title="@string/statistics" />
    </group>
    <group
        android:id="@+id/manage_group"
        android:checkableBehavior="single">
        <item
            android:id="@+id/suggUserPasswordFragment"
            android:icon="@drawable/ic_round_assistant_24"
            android:title="@string/suggested_users_title" />
        <item
            android:id="@+id/nav_user"
            android:icon="@drawable/ic_round_people_24"
            android:title="@string/manage_users" />
        <item
            android:id="@+id/nav_products"
            android:icon="@drawable/ic_round_local_shipping_24"
            android:title="@string/manage_products" />
        <item
            android:id="@+id/nav_history"
            android:icon="@drawable/ic_round_history_24"
            android:title="@string/action_history" />
    </group>
    <group
        android:id="@+id/account_group"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_feedback"
            android:icon="@drawable/ic_baseline_feedback_24"
            android:title="@string/feedback"/>
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_round_settings_24"
            android:title="@string/settings" />
        <!--        <item-->
        <!--            android:id="@+id/nav_logout"-->
        <!--            android:icon="@drawable/ic_log_out_icon_128821"-->
        <!--            android:title="@string/sign_out" />-->
    </group>
</menu>