<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="de.muenchen.appcenter.nimux.view.main.FeedbackFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="12dp">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/feedback_title_layout"
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/feedback_sites_margin"
            android:layout_marginTop="@dimen/feedback_tops_margin"
            android:layout_marginEnd="@dimen/feedback_sites_margin"
            android:hint="@string/title">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:lines="1"
                android:singleLine="true" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/feedback_description_layout"
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/feedback_sites_margin"
            android:layout_marginTop="@dimen/feedback_tops_margin"
            android:layout_marginEnd="@dimen/feedback_sites_margin"
            android:hint="@string/description">

            <com.google.android.material.textfield.TextInputEditText
                style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="top"
                android:inputType="textMultiLine"
                android:lines="6" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/feedback_name_layout"
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/feedback_sites_margin"
            android:layout_marginTop="@dimen/feedback_tops_margin"
            android:layout_marginEnd="@dimen/feedback_sites_margin"
            android:hint="@string/feedback_name_hint"
            app:helperText="@string/feedback_name_helper">

            <com.google.android.material.textfield.TextInputEditText
                style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="top"
                android:inputType="textMultiLine"
                android:lines="1"
                android:singleLine="true" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/feedback_sites_margin"
            android:layout_marginTop="@dimen/feedback_tops_margin"
            android:layout_marginEnd="@dimen/feedback_sites_margin"
            android:text="@string/occurrence"
            android:textAppearance="?textAppearanceBody1" />

        <RadioGroup
            android:id="@+id/feedback_occurrence_radio_group"
            style="@style/Widget.Material3.CompoundButton.RadioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/feedback_sites_margin"
            android:layout_marginEnd="@dimen/feedback_sites_margin"
            android:clickable="true"
            android:focusableInTouchMode="true">

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/feedback_rb_100" />

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/feedback_rb_50_to_100" />

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/feedback_rb_10_to_50" />

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/feedback_rb_1_to_10" />

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/feedback_rb_under_1" />
        </RadioGroup>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/send_feedback_button"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/button_height"
                android:layout_marginTop="@dimen/feedback_tops_margin"
                android:layout_marginEnd="@dimen/feedback_sites_margin"
                android:text="@string/send_feedback_button_text"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>
</ScrollView>
