<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="24dp">

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/shelf_name"
        android:layout_marginBottom="16dp"
        style="?attr/textInputOutlinedStyle">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_shelf_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/shelf_column"
        android:layout_marginBottom="16dp"
        style="?attr/textInputOutlinedStyle">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_shelf_columns"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/shelf_row"
        style="?attr/textInputOutlinedStyle">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_shelf_rows"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number" />
    </com.google.android.material.textfield.TextInputLayout>

</LinearLayout>